[package]
name = "auction"
version = "0.6.2"
authors = ["Shiki Takahashi"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { git = "https://github.com/line/cosmwasm", branch = "dynamic_link" }
cosmwasm-storage = { git = "https://github.com/line/cosmwasm", branch = "dynamic_link" }
nft = { path = "../../packages/nft" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { git = "https://github.com/line/cosmwasm", branch = "dynamic_link" }
